# python-project-lvl2

./: README.md  pyproject.toml
gendiff_folder/: gendiff.py
gendiff_folder/progs/: gendiff.py
gendiff_folder/scripts/: gendiff_s.py
scripts/: gendiff.py
