[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nurlan Khamzin <khamzin1991@gmail.com>"]
packages = [
  { include = "gendiff_folder" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
wemake-python-styleguide = "^0.15.2"

[tool.poetry.scripts]
generate_diff = "gendiff_folder.scripts.gendiff_s:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
